added id19 stuffies

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>gyatzee</title>
 </head>
 <body>
-    <img src="images/5 dice.jpg" alt="image of my white cat laying on my lap" />
+    <img src="images/5 dice.jpg" alt="image of 5 read dice showing 1, 2, 4, 5, 6" />
 </body>
 </html>
