--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>gyatzee</title>
+    <title>Grape Vine CSS Layout</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <img src="images/5 dice.jpg" alt="image of 5 read dice showing 1, 2, 4, 5, 6" />
+    <div class="container">
+        <div class="circle circle-1"></div>
+        <div class="circle circle-2"></div>
+        <div class="circle circle-3"></div>
+        <div class="circle circle-4"></div>
+        <div class="circle circle-5"></div>
+    </div>
 </body>
 </html>
