--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Grape Vine CSS Layout</title>
-<link rel="stylesheet" href="styles/styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Peach Scatter CSS Layout</title>
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
-<div class="container">
-    <div class="circle circle-1"></div>
-    <div class="circle circle-2"></div>
-    <div class="circle circle-3"></div>
-    <div class="circle circle-4"></div>
-    <div class="circle circle-5"></div>
-</div>
+    <div class="container">
+        <div class="peach peach-1"></div>
+        <div class="peach peach-2"></div>
+        <div class="peach peach-3"></div>
+        <div class="peach peach-4"></div>
+        <div class="peach peach-5"></div>
+    </div>
 </body>
 </html>
