--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Peach Scatter CSS Layout</title>
+    <title>Gyatzee Peach Landing Page</title>
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
     <div class="container">
-        <div class="peach peach-1"></div>
-        <div class="peach peach-2"></div>
-        <div class="peach peach-3"></div>
-        <div class="peach peach-4"></div>
-        <div class="peach peach-5"></div>
+        <div class="peach peach-1 peach-number">1</div>
+        <div class="peach peach-2 peach-number">2</div>
+        <div class="peach peach-3 peach-number">3</div>
+        <div class="peach peach-4 peach-number">4</div>
+        <div class="peach peach-5 peach-number">5</div>
     </div>
 </body>
 </html>
