--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <div class="container">
-        <div class="peach peach-1 peach-number">1</div>
-        <div class="peach peach-2 peach-number">2</div>
-        <div class="peach peach-3 peach-number">3</div>
-        <div class="peach peach-4 peach-number">4</div>
-        <div class="peach peach-5 peach-number">5</div>
+        <div class="peach peach-1"><span class="peach-number">1</span></div>
+        <div class="peach peach-2"><span class="peach-number">2</span></div>
+        <div class="peach peach-3"><span class="peach-number">3</span></div>
+        <div class="peach peach-4"><span class="peach-number">4</span></div>
+        <div class="peach peach-5"><span class="peach-number">5</span></div>
     </div>
-</body>
+    
 </html>
