added index html changed title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gyatzee Peach Landing Page</title>
+    <title>Gyatzee Landing Page</title>
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
@@ -14,5 +14,5 @@
         <div class="peach peach-4"><span class="peach-number">4</span></div>
         <div class="peach peach-5"><span class="peach-number">5</span></div>
     </div>
-    
+
 </html>
