--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
+    <header>
+        <h1 class="refresh-text" onclick="location.reload();">Gyatzee</h1>
+        <div class="login-container">
+            <img src="images/peach.png" alt="Peach Icon" class="peach-icon">
+            <a href="login.html" class="login-link">Log In</a>
+        </div>
+    </header>
+
     <div class="container">
         <div class="peach peach-1"><span class="peach-number">1</span></div>
         <div class="peach peach-2"><span class="peach-number">2</span></div>
