--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     </header>
 
     <div class="container">
-        <div class="peach peach-1"><span class="peach-number">1</span></div>
-        <div class="peach peach-2"><span class="peach-number">2</span></div>
-        <div class="peach peach-3"><span class="peach-number">3</span></div>
-        <div class="peach peach-4"><span class="peach-number">4</span></div>
-        <div class="peach peach-5"><span class="peach-number">5</span></div>
+        <div class="peach peach-1" onclick="window.location.href='playsession.html';"><span class="peach-number">1</span></div>
+        <div class="peach peach-2" onclick="window.location.href='playsession.html';"><span class="peach-number">2</span></div>
+        <div class="peach peach-3" onclick="window.location.href='playsession.html';"><span class="peach-number">3</span></div>
+        <div class="peach peach-4" onclick="window.location.href='playsession.html';"><span class="peach-number">4</span></div>
+        <div class="peach peach-5" onclick="window.location.href='playsession.html';"><span class="peach-number">5</span></div>
     </div>
 
 </html>
