--- a/login.html
+++ b/login.html
@@ -4,8 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gyatzee Login Page</title>
+    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/login.css">
 </head>
 <body>
-    
+    <header>
+        <h1 class="refresh-text"><a href="index.html" class="gyatzee-link">Gyatzee</a></h1>
+        <div class="login-container">
+            <img src="images/peach.png" alt="Peach Icon" class="peach-icon">
+            <a href="login.html" class="login-link">Log In</a>
+        </div>
+    </header>
+
+    <div class="login-container">
+        <div class="login-box">
+            <p> test test </p>
+        </div>
+    </div>
 </body>
 </html>
