--- a/login.html
+++ b/login.html
@@ -16,10 +16,21 @@
         </div>
     </header>
 
-    <div class="login-container">
-        <div class="login-box">
-            <p> test test </p>
-        </div>
+    <div class="login-box">
+        <h2>Login</h2>
+        <form>
+            <div class="form-group">
+                <label for="username">Username or Email:</label>
+                <input type="text" id="username" name="username" required>
+            </div>
+            <div class="form-group">
+                <label for="password">Password:</label>
+                <input type="password" id="password" name="password" required>
+            </div>
+            <button type="submit">Login</button>
+        </form>
+        <p>Don't have an account? <a href="register.html">Register</a></p>
+        <p><a href="forgot_password.html">Forgot password?</a></p>
     </div>
 </body>
 </html>
