added media query for small screens

--- a/login.html
+++ b/login.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gyatzee Login Page</title>
+    <title>Gyatzee Login</title>
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="stylesheet" href="styles/login.css">
 </head>
 <body>
     <header>
-        <h1 class="refresh-text"><a href="index.html" class="gyatzee-link">Gyatzee</a></h1>
+        <h1 class="gyatzee-heading"><a href="index.html" class="gyatzee-link">Gyatzee</a></h1>
         <div class="login-container">
             <img src="images/peach.png" alt="Peach Icon" class="peach-icon">
             <a href="login.html" class="login-link">Log In</a>
@@ -29,8 +29,8 @@
             </div>
             <button type="submit">Login</button>
         </form>
-        <p>Don't have an account? <a href="register.html">Register</a></p>
-        <p><a href="forgot_password.html">Forgot password?</a></p>
+        <p>Don't have an account? <a href="register.html" class="register-link">Register</a></p>
+        <p><a href="forgot_password.html" class="forgot-password-link">Forgot password?</a></p>
     </div>
 </body>
 </html>
