fixed header by linking to styles.css

--- a/playsession.html
+++ b/playsession.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gyatzee</title>
     <link rel="stylesheet" href="styles/gyatzee.css">
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
     <header>
-        <h1 class="refresh-text"><a href="index.html" class="gyatzee-link">Gyatzee</a></h1>
+        <h1 class="gyatzee-heading"><a href="index.html" class="gyatzee-link">Gyatzee</a></h1>
         <div class="login-container">
             <img src="images/peach.png" alt="Peach Icon" class="peach-icon">
             <a href="login.html" class="login-link">Log In</a>
@@ -25,12 +26,12 @@
         </div>
 
         <div class="scorecard">
-            <!-- Scorecard soon tm -->
+            <!-- Scorecard content will be dynamically generated here -->
         </div>
     </main>
 
     <footer>
-        <!-- footer needed? -->
+        <!-- Add any footer content here -->
     </footer>
 
     <script src="scripts/gyatzee.js"></script>
