made up mock scoreboard

--- a/playsession.html
+++ b/playsession.html
@@ -26,12 +26,82 @@
         </div>
 
         <div class="scorecard">
-            <!-- Scorecard content will be dynamically generated here -->
+            <div class="score-section">
+                <div class="score-row">
+                    <div class="category">Ones</div>
+                    <div class="score">-</div>
+                </div>
+                <div class="score-row">
+                    <div class="category">Twos</div>
+                    <div class="score">-</div>
+                </div>
+                <div class="score-row">
+                    <div class="category">Threes</div>
+                    <div class="score">-</div>
+                </div>
+                <div class="score-row">
+                    <div class="category">Fours</div>
+                    <div class="score">-</div>
+                </div>
+                <div class="score-row">
+                    <div class="category">Fives</div>
+                    <div class="score">-</div>
+                </div>
+                <div class="score-row">
+                    <div class="category">Sixes</div>
+                    <div class="score">-</div>
+                </div>
+                <div class="score-row total-row">
+                    <div class="category">Bonus</div>
+                    <div class="score">-</div>
+                </div>
+                <div class="score-row total-row">
+                    <div class="category">Sum</div>
+                    <div class="score">-</div>
+                </div>
+            </div>
+            
+            <div class="separator"></div>
+            
+            <div class="score-section">
+                <div class="score-row">
+                    <div class="category">Three of a Kind</div>
+                    <div class="score">-</div>
+                </div>
+                <div class="score-row">
+                    <div class="category">Four of a Kind</div>
+                    <div class="score">-</div>
+                </div>
+                <div class="score-row">
+                    <div class="category">Full House</div>
+                    <div class="score">-</div>
+                </div>
+                <div class="score-row">
+                    <div class="category">Small Straight</div>
+                    <div class="score">-</div>
+                </div>
+                <div class="score-row">
+                    <div class="category">Large Straight</div>
+                    <div class="score">-</div>
+                </div>
+                <div class="score-row">
+                    <div class="category">Gyatzee</div>
+                    <div class="score">-</div>
+                </div>
+                <div class="score-row failure-row">
+                    <div class="category">Failure</div>
+                    <div class="score">-</div>
+                </div>
+                <div class="score-row total-row">
+                    <div class="category">Total</div>
+                    <div class="score">-</div>
+                </div>
+            </div>
         </div>
     </main>
 
     <footer>
-        <!-- Add any footer content here -->
+        <!-- do I need a footer? -->
     </footer>
 
     <script src="scripts/gyatzee.js"></script>
