fixed dice / peaches to be on the right side of the scoreboard

--- a/playsession.html
+++ b/playsession.html
@@ -16,15 +16,7 @@
         </div>
     </header>
 
-    <main>
-        <div class="dice-container">
-            <div class="dice" onclick="rollDice()"><span class="peach-number">1</span></div>
-            <div class="dice" onclick="rollDice()"><span class="peach-number">2</span></div>
-            <div class="dice" onclick="rollDice()"><span class="peach-number">3</span></div>
-            <div class="dice" onclick="rollDice()"><span class="peach-number">4</span></div>
-            <div class="dice" onclick="rollDice()"><span class="peach-number">5</span></div>
-        </div>
-
+    <main class="flex-container">
         <div class="scorecard">
             <div class="score-section">
                 <div class="score-row">
@@ -97,6 +89,14 @@
                     <div class="score">-</div>
                 </div>
             </div>
+        </div>
+
+        <div class="dice-container">
+            <div class="dice" onclick="rollDice()"><span class="peach-number">1</span></div>
+            <div class="dice" onclick="rollDice()"><span class="peach-number">2</span></div>
+            <div class="dice" onclick="rollDice()"><span class="peach-number">3</span></div>
+            <div class="dice" onclick="rollDice()"><span class="peach-number">4</span></div>
+            <div class="dice" onclick="rollDice()"><span class="peach-number">5</span></div>
         </div>
     </main>
 
