--- a/forgot_password.html
+++ b/forgot_password.html
@@ -3,9 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Forgot Password</title>
+    <link rel="stylesheet" href="styles/forgot_password.css">
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
-    
+    <header>
+        <h1 class="gyatzee-heading"><a href="index.html" class="gyatzee-link">Gyatzee</a></h1>
+        <div class="login-container">
+            <img src="images/peach.png" alt="Peach Icon" class="peach-icon">
+            <a href="login.html" class="login-link">Log In</a>
+        </div>
+    </header>
+
+    <div class="forgot-password-box">
+        <h2>Forgot Password</h2>
+        <form action="#">
+            <div class="form-group">
+                <label for="email">Email</label>
+                <input type="email" id="email" name="email" required>
+            </div>
+            <button type="submit">Reset Password</button>
+        </form>
+        <p>Remembered your password? <a href="login.html" class="login-link">Log in</a></p>
+    </div>
+
 </body>
 </html>
