--- a/forgot_password.html
+++ b/forgot_password.html
@@ -12,7 +12,7 @@
         <h1 class="gyatzee-heading"><a href="index.html" class="gyatzee-link">Gyatzee</a></h1>
         <div class="login-container">
             <img src="images/peach.png" alt="Peach Icon" class="peach-icon">
-            <a href="login.html" class="login-link">Log In</a>
+            <a href="login.html" class="header-login-link">Log In</a>
         </div>
     </header>
 
